--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="/svg+xml+png" href="/bg.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="This is my Persnol Portfolio This Shows How I Learn and use that to make eye catching websites."
+    />
     <title>Ayan Sidatar | Portfolio-Mern Stack Web Developer.</title>
   </head>
   <body>
