--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="/svg+xml+png" href="/bg.png" />
+    <link rel="icon" type="/svg+xml+png" href="/Fave2.png" />
     <meta
       name="viewport"
       content="This is my Persnol Portfolio This Shows How I Learn and use that to make eye catching websites."
